# insightdesk-ai

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTIC_ARCHITECTURE.md  CI-CD-REFERENCE.md  Dockerfile  LANGGRAPH_INTEGRATION_SUMMARY.md  LANGGRAPH_README.md  Makefile  README.md  SINGLE_DEPLOYMENT_GUIDE.md  add_spa_route.py  app.py  demo_dashboard.py  docker-compose.prod.yml  docker-compose.single.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  streamlit_demo.py  test_feedback.db  test_import.py  validate-ci-cd.ps1
.agent/: langgraph_integration_plan.md
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/pages/: Anomalies.jsx  Feedback.jsx  Monitoring.jsx  SolutionRetrieval.jsx  TicketCategorization.jsx
legacy/streamlit/: app.py  streamlit_demo.py
models/: feature_pipeline.pkl  label_encoder_category.pkl  xgb_category.pkl
scripts/: ab_testing_framework.py  benchmark_models.py  build_features.py  build_rag_index.py  demo_anomaly.py  demo_benchmarking.py  demo_feedback.py  demo_graph_rag.py  demo_langgraph.py  demo_monitoring.py  demo_rag.py  demo_workflow.py  ingest_graph_data.py  launch_full_stack.py  load_demo_anomalies.py  setup_mlflow.py  test_agent_api.py  test_agent_simple.py  test_anomaly_quick.py  test_benchmark_quick.py  test_dashboard.py  test_feedback_quick.py  test_graph_rag.py  test_langgraph_agent.py  test_models.py  test_monitoring.py  test_monitoring_quick.py  train_and_compare_models.py  train_tensorflow.py  train_xgboost.py  unzip_and_load.py  validate_ci_cd.py  verify_agent.py
src/agentic/: core.py  memory.py  orchestrator.py  orchestrator_langgraph.py  planner.py
src/agentic/tools/: ml_tools.py  rag_tools.py
src/anomaly/: __init__.py  anomaly_detector.py  anomaly_models.py
src/api/: main.py
src/features/: feature_builder.py
src/feedback/: __init__.py  feedback_manager.py  feedback_models.py  feedback_storage.py
src/ingestion/: data_loader.py
src/models/: tensorflow_classifier.py  xgboost_classifier.py
src/monitoring/: __init__.py  alert_manager.py  drift_detector.py  metrics_logger.py  performance_monitor.py
src/retrieval/: embedding_manager.py  graph_manager.py  hybrid_rag_pipeline.py  rag_pipeline.py  vector_store.py
tests/: test_anomaly.py  test_api.py  test_rag.py
